--- a/portfolio.html
+++ b/portfolio.html
@@ -51,41 +51,50 @@
             </ul>
             <!-- Портфолио -->
             <ul class="portfolio-list list">
-                <li class="portfolio-item"><a href=""><img src="./images/portfolio1.jpg" alt="" width="370" />
-                        <h2 class="portfolio-text">Технокряк</h2>
+                <li class="portfolio-item"><a class="link" href=""><img src="./images/portfolio1.jpg" alt=""
+                            width="370" />
+                        <h2 class="portfolio-text ">Технокряк</h2>
                         <p class="portfolio-pretext">Веб-сайт</p>
                     </a></li>
-                <li class="portfolio-item"><a href=""><img src="./images/portfolio2.jpg" alt="планшет" width="370" />
+                <li class="portfolio-item"><a class="link" href=""><img src="./images/portfolio2.jpg" alt="планшет"
+                            width="370" />
                         <h2 class="portfolio-text">Постер New Orlean vs Golden Star</h2>
                         <p class="portfolio-pretext">Дизайн</p>
                     </a></li>
-                <li class="portfolio-item"><a href=""><img src="./images/portfolio3.jpg" alt="планшет" width="370" />
+                <li class="portfolio-item"><a class="link" href=""><img src="./images/portfolio3.jpg" alt="планшет"
+                            width="370" />
                         <h2 class="portfolio-text">Ресторан Seafood</h2>
                         <p class="portfolio-pretext">Приложение</p>
                     </a></li>
 
-                <li class="portfolio-item"><a href=""><img src="./images/portfolio4.jpg" alt="планшет" width="370" />
+                <li class="portfolio-item"><a class="link" href=""><img src="./images/portfolio4.jpg" alt="планшет"
+                            width="370" />
                         <h2 class="portfolio-text">Проект Prime</h2>
                         <p class="portfolio-pretext">Маркетинг</p>
                     </a></li>
-                <li class="portfolio-item"><a href=""><img src="./images/portfolio5.jpg" alt="планшет" width="370" />
+                <li class="portfolio-item"><a class="link" href=""><img src="./images/portfolio5.jpg" alt="планшет"
+                            width="370" />
                         <h2 class="portfolio-text">Проект Boxes</h2>
                         <p class="portfolio-pretext">Приложение</p>
                     </a></li>
-                <li class="portfolio-item"><a href=""><img src="./images/portfolio6.jpg" alt="планшет" width="370" />
+                <li class="portfolio-item"><a class="link" href=""><img src="./images/portfolio6.jpg" alt="планшет"
+                            width="370" />
                         <h2 class="portfolio-text">Inspiration has no Borders</h2>
                         <p class="portfolio-pretext">Веб-сайт</p>
                     </a></li>
 
-                <li class="portfolio-item"><a href=""><img src="./images/portfolio7.jpg" alt="планшет" width="370" />
+                <li class="portfolio-item"><a class="link" href=""><img src="./images/portfolio7.jpg" alt="планшет"
+                            width="370" />
                         <h2 class="portfolio-text">Издание Limited Edition</h2>
                         <p class="portfolio-pretext">Дизайн</p>
                     </a></li>
-                <li class="portfolio-item"><a href=""><img src="./images/portfolio8.jpg" alt="планшет" width="370" />
+                <li class="portfolio-item"><a class="link" href=""><img src="./images/portfolio8.jpg" alt="планшет"
+                            width="370" />
                         <h2 class="portfolio-text">Проект LAB</h2>
                         <p class="portfolio-pretext">Маркетинг</p>
                     </a></li>
-                <li class="portfolio-item"><a href=""><img src="./images/portfolio9.jpg" alt="планшет" width="370" />
+                <li class="portfolio-item"><a class="link" href=""><img src="./images/portfolio9.jpg" alt="планшет"
+                            width="370" />
                         <h2 class="portfolio-text">Growing Business</h2>
                         <p class="portfolio-pretext">Приложение</p>
                     </a></li>
